Add delet catch button

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -47,7 +47,7 @@
       <div id="catchesRegion" class="region">
 
         <div id="catchesDiv"></div>
-        <button id="addCatchButt">+</button>
+        <button id="addCatchButt" class="catchButt">+</button>
 
         <button id="updateCatchesButt" class="updateButt">
           <load-svg src="SVGs/Check.svg" id="checkIcon"></load-svg>
