Implement get Citra team data button

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -60,10 +60,18 @@
   
         <div id=pokeParty></div>
   
-        <button id="updateTeamButt" class="updateButt">
-          <load-svg src="SVGs/Check.svg" id="checkIcon"></load-svg>
-          <div id="updateTeamText">UPDATE TEAM</div>
-        </button>
+        <div class="teamButtRegion">
+
+          <button id="updateTeamButt" class="updateButt">
+            <load-svg src="SVGs/Check.svg" id="checkIcon"></load-svg>
+            <div id="updateTeamText">UPDATE TEAM</div>
+          </button>
+
+          <button class="updateButt" id="citraButt" tabindex="-1">
+            🍊 GET DATA
+          </button>
+
+        </div>
   
       </div>
   
@@ -319,12 +327,6 @@
               <div id="settingsButtonSection">
                 <button class="settingsButton" id="restoreWindowButt" tabindex="-1" title='Restores the default window width, height, and zoom values'>
                   Restore default dimensions
-                </button>
-              </div>
-
-              <div id="settingsButtonSection">
-                <button class="settingsButton" id="citraButt" tabindex="-1">
-                  Citra moment
                 </button>
               </div>
     
