Add HP and danger states to XY overlay

--- a/Stream Tool/Overlays/X and Y/XY Overlay.html
+++ b/Stream Tool/Overlays/X and Y/XY Overlay.html
@@ -197,7 +197,7 @@
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
                     <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText">123/157</div>
+                    <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
                         <div class="pokeHpBarTotal"></div>
@@ -239,7 +239,7 @@
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
                     <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText">13/257</div>
+                    <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
                         <div class="pokeHpBarTotal"></div>
@@ -281,7 +281,7 @@
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
                     <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText">123/157</div>
+                    <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
                         <div class="pokeHpBarTotal"></div>
@@ -323,7 +323,7 @@
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
                     <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText">123/157</div>
+                    <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
                         <div class="pokeHpBarTotal"></div>
@@ -365,7 +365,7 @@
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
                     <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText">123/157</div>
+                    <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
                         <div class="pokeHpBarTotal"></div>
@@ -407,7 +407,7 @@
             <div class="pokeDivMask">
                 <div class="pokeHpDiv">
                     <div class="pokeHpBefore"></div>
-                    <div class="pokeHpText">123/157</div>
+                    <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
                         <div class="pokeHpBarTotal"></div>
