Add gane version select for gen 6

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -291,10 +291,8 @@
 
               <div id="gameSelectDiv" class="settingBox" title="Changes the current game data">
                 <div>Game select</div>
-                <select id="gameSelect" class="settingsSelect">
-                  <option value="BW2">BW2</option>
-                  <option value="XY">XY</option>
-                </select>
+                <select id="gameSelect" class="settingsSelect" title="Determines badges and memory reading"></select>
+                <select id="versionSelect" class="settingsSelect" title="Determines memory reading"></select>
               </div>
   
             </div>
