Full Gen6 memory reading + auto-update

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -67,8 +67,8 @@
             <div id="updateTeamText">UPDATE TEAM</div>
           </button>
 
-          <button class="updateButt" id="citraButt" tabindex="-1">
-            🍊 GET DATA
+          <button class="updateButt citraButtOff" id="citraButt" tabindex="-1" title="Sets auto-update on or off for Gen6/Citra games">
+            🍊 AUTO OFF
           </button>
 
         </div>
