Intro Overlay: Display message when no catches

--- a/Stream Tool/Overlays/Stream Intro/Intro.html
+++ b/Stream Tool/Overlays/Stream Intro/Intro.html
@@ -20,6 +20,10 @@
                 <div id="whoThatRevealProgress" class="whoThatBar"></div>
             </div>
         </div>
+
+        <div id="noCatchesMessage">There are no catches to work with :(</div>
+
+
         <div id="whoThatContent">
 
             <div id="pokeImgContainer">
