XY: Animate HP changes

--- a/Stream Tool/Overlays/X and Y/XY Overlay.html
+++ b/Stream Tool/Overlays/X and Y/XY Overlay.html
@@ -194,8 +194,8 @@
                     <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
-                        <div class="pokeHpBarTotal"></div>
-                        <div class="pokeHpBarCurrent"></div>
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
                     </div>
                 </div>
             </div>
@@ -236,8 +236,8 @@
                     <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
-                        <div class="pokeHpBarTotal"></div>
-                        <div class="pokeHpBarCurrent"></div>
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
                     </div>
                 </div>
             </div>
@@ -278,8 +278,8 @@
                     <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
-                        <div class="pokeHpBarTotal"></div>
-                        <div class="pokeHpBarCurrent"></div>
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
                     </div>
                 </div>
             </div>
@@ -320,8 +320,8 @@
                     <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
-                        <div class="pokeHpBarTotal"></div>
-                        <div class="pokeHpBarCurrent"></div>
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
                     </div>
                 </div>
             </div>
@@ -362,8 +362,8 @@
                     <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
-                        <div class="pokeHpBarTotal"></div>
-                        <div class="pokeHpBarCurrent"></div>
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
                     </div>
                 </div>
             </div>
@@ -404,8 +404,8 @@
                     <div class="pokeHpText"></div>
                     <div class="pokeHpAfter"></div>
                     <div class="pokeHpBar">
-                        <div class="pokeHpBarTotal"></div>
-                        <div class="pokeHpBarCurrent"></div>
+                        <div class="hpBar pokeHpBarTotal"></div>
+                        <div class="hpBar pokeHpBarCurrent"></div>
                     </div>
                 </div>
             </div>
