--- a/Stream Tool/Overlays/Stream Intro/Intro.html
+++ b/Stream Tool/Overlays/Stream Intro/Intro.html
@@ -21,8 +21,7 @@
             </div>
         </div>
 
-        <div id="noCatchesMessage">There are no catches to work with :(</div>
-
+        <div id="noCatchesMessage" locText="introNoCatches"></div>
 
         <div id="whoThatContent">
 
@@ -45,7 +44,7 @@
 
         <div id="countdownBg"></div>
         <div id="countdownTextDiv">
-            <div id="countdownText">en 3:14</div>
+            <div id="countdownText"></div>
         </div>        
 
     </div>
