More localized texts

--- a/Stream Tool/Overlays/Stream Intro/Intro.html
+++ b/Stream Tool/Overlays/Stream Intro/Intro.html
@@ -51,7 +51,7 @@
 
 </div>
 
-<div id="connErrorDiv">
+<div id="connErrorDiv" locText="connError">
     Can't connect with GUI, attempting to reconnect every 5 seconds...
 </div>
     
