--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -93,43 +93,43 @@
         <div id="vsWildStatsDiv">
 
             <div class="vsWildStat" id="vsWildStatHP">
-              <div class="vsWildStatName vsWildStatText">HP</div>
+              <div class="vsWildStatName vsWildStatText" locText="statsHp"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberHP"></div>
               <div class="vsWildMeter" id="vsWildMeterHP"></div>
             </div>
   
             <div class="vsWildStat" id="vsWildStatAT">
-              <div class="vsWildStatName vsWildStatText">Attack</div>
+              <div class="vsWildStatName vsWildStatText" locText="statsAttack"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberAT"></div>
               <div class="vsWildMeter" id="vsWildMeterAT"></div>
             </div>
   
             <div class="vsWildStat" id="vsWildStatDE">
-              <div class="vsWildStatName vsWildStatText">Defense</div>
+              <div class="vsWildStatName vsWildStatText" locText="statsDefense"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberDE"></div>
               <div class="vsWildMeter" id="vsWildMeterDE"></div>
             </div>
   
             <div class="vsWildStat" id="vsWildStatSA">
-              <div class="vsWildStatName vsWildStatText">Sp. Attack</div>
+              <div class="vsWildStatName vsWildStatText" locText="statsSpAtk"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSA"></div>
               <div class="vsWildMeter" id="vsWildMeterSA"></div>
             </div>
   
             <div class="vsWildStat" id="vsWildStatSD">
-              <div class="vsWildStatName vsWildStatText">Sp. Defense</div>
+              <div class="vsWildStatName vsWildStatText" locText="statsSpDef"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSD"></div>
               <div class="vsWildMeter" id="vsWildMeterSD"></div>
             </div>
   
             <div class="vsWildStat" id="vsWildStatSP">
-              <div class="vsWildStatName vsWildStatText">Speed</div>
+              <div class="vsWildStatName vsWildStatText" locText="statsSpeed"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSP"></div>
               <div class="vsWildMeter" id="vsWildMeterSP"></div>
             </div>
   
             <div class="vsWildStat" id="vsWildStatTS">
-              <div class="vsWildStatName vsWildStatText">Total</div>
+              <div class="vsWildStatName vsWildStatText" locText="statsTotal"></div>
               <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberTS"></div>
               <div class="vsWildMeter" id="vsWildMeterTS"></div>
             </div>
@@ -146,7 +146,7 @@
             </div>
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
-                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlText" locText="pokeLvl"></div>
                     <div class="pokeLvlNum"></div>
                 </div>
                 <div class="pokeNick"></div>
@@ -163,7 +163,7 @@
             </div>
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
-                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlText" locText="pokeLvl"></div>
                     <div class="pokeLvlNum"></div>
                 </div>
                 <div class="pokeNick"></div>
@@ -180,7 +180,7 @@
             </div>
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
-                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlText" locText="pokeLvl"></div>
                     <div class="pokeLvlNum"></div>
                 </div>
                 <div class="pokeNick"></div>
@@ -197,7 +197,7 @@
             </div>
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
-                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlText" locText="pokeLvl"></div>
                     <div class="pokeLvlNum"></div>
                 </div>
                 <div class="pokeNick"></div>
@@ -214,7 +214,7 @@
             </div>
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
-                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlText" locText="pokeLvl"></div>
                     <div class="pokeLvlNum"></div>
                 </div>
                 <div class="pokeNick"></div>
@@ -231,7 +231,7 @@
             </div>
             <div class="pokeTexts">
                 <div class="pokeLvlDiv">
-                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlText" locText="pokeLvl"></div>
                     <div class="pokeLvlNum"></div>
                 </div>
                 <div class="pokeNick"></div>
@@ -248,7 +248,7 @@
 
 </div>
 
-<div id="connErrorDiv">
+<div id="connErrorDiv" locText="connError">
     Can't connect with GUI, attempting to reconnect every 5 seconds...
 </div>
     
