Notify user when sending a catch + update catches counter

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -352,7 +352,7 @@
 
 <!-- stuff that will get moved around -->
 <div id="pokeFinder" class="finder">
-  <input type="text" class="listSearch mousetrap" placeholder="Type to filter..." spellcheck="false" tabindex="-1">
+  <input type="text" class="listSearch mousetrap" locPHolder="finderFilterPHolder" spellcheck="false" tabindex="-1">
   <div class="searchList" id="pokeSearchList"></div>
 </div>
   
