Assets now fetched on demand + Pokemon base class

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -205,11 +205,11 @@
 
             <div class="vsWildPokeTypeDiv" locTitle="pokeTypesTitle">
               <div class="vsWildTypeDiv">
-                <img alt="" class="typeIcon typeIcon1">
+                <img alt="" id="wildTypeIcon1" class="typeIcon">
                 <span></span>
               </div>
               <div class="vsWildTypeDiv">
-                <img alt="" class="typeIcon typeIcon2">
+                <img alt="" id="wildTypeIcon2" class="typeIcon">
                 <span></span>
               </div>
             </div>
@@ -244,7 +244,7 @@
 
           <div id="vsWildSendCatchDiv">
             <input type="text" id="vsWildNickInput" class="pokeNickName textInput mousetrap" spellcheck="false" locPHolder="pokeNickPHolder" locTitle="pokeNickTitle">
-            <button id="sendCatchButt" class="updateButt" locText="wildSendButt"></button>
+            <button id="sendCatchButt" class="updateButt" locText="wildSendButt" locTitle="wildSendButtTitle"></button>
           </div>
 
           <div id="vsWildInCombatDiv">
