Loading sprites info message

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -348,6 +348,7 @@
 <div id="notifDiv">
   
 </div>
+<div id="loadingImgsMessage" locText="loadingImgsMessage"></div>
 
 
 <!-- stuff that will get moved around -->
