Increase stat on icon click

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -111,12 +111,12 @@
         <div id="playerStats">
   
           <div class="statDiv" locTitle="playerCatchesNumTitle">
-            <load-svg src="SVGs/Pokeball.svg" class="pokeballIcon"></load-svg>
+            <load-svg src="SVGs/Pokeball.svg" class="statsPokeballIcon statIcon" id="statsCatchesIcon"></load-svg>
             <input type="number" id="catchesInput" class="statInput textInput mousetrap" value="0">
           </div>
   
           <div class="statDiv" locTitle="playerDeathsNumTitle">
-            <load-svg src="SVGs/Skull.svg" class="skullIcon"></load-svg>
+            <load-svg src="SVGs/Skull.svg" class="skullIcon statIcon" id="statsDeathsIcon"></load-svg>
             <input type="number" id="deathsInput" class="statInput textInput mousetrap" value="0">
           </div>
   
