Add BW1 badges and replace some badges assets

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -18,7 +18,7 @@
             <img src="../../Resources/Assets/Gym Badges/5/BW2/2.png" id="badge2" class="badge" alt="">
             <img src="../../Resources/Assets/Gym Badges/5/BW2/3.png" id="badge3" class="badge" alt="">
             <img src="../../Resources/Assets/Gym Badges/5/BW2/4.png" id="badge4" class="badge" alt="">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/Badges Top.png" alt="">
+            <img src="Resources/Images/Badges Top.png" alt="">
         </div>
 
         <div id="badgesBot">
@@ -26,7 +26,7 @@
             <img src="../../Resources/Assets/Gym Badges/5/BW2/6.png" id="badge6" class="badge" alt="">
             <img src="../../Resources/Assets/Gym Badges/5/BW2/7.png" id="badge7" class="badge" alt="">
             <img src="../../Resources/Assets/Gym Badges/5/BW2/8.png" id="badge8" class="badge">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/Badges Bot.png" alt="">
+            <img src="Resources/Images/Badges Bot.png" alt="">
         </div>
 
         <div id="playerStats">
