Add poke in combat systems and send battle type

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -66,14 +66,14 @@
   
         <div class="teamButtRegion">
 
+          <button class="updateButt battleTypeButt" id="bTypeButt" tabindex="-1" locText="bTypeButtNone" locTitle="bTypeButtTitle"></button>
+
           <button id="updateTeamButt" class="updateButt">
             <load-svg src="SVGs/Check.svg" id="checkIcon"></load-svg>
             <div id="updateTeamText" locText="pokeUpdateButt"></div>
           </button>
 
-          <button class="updateButt citraButtOff" id="citraButt" tabindex="-1" locText="autoUpdateButtOff" locTitle="autoUpdateButtTitle">
-            🍊 AUTO OFF
-          </button>
+          <button class="updateButt citraButtOff" id="citraButt" tabindex="-1" locText="autoUpdateButtOff" locTitle="autoUpdateButtTitle"></button>
 
         </div>
   
@@ -251,11 +251,6 @@
             <button id="sendCatchButt" class="updateButt" locText="wildSendButt" locTitle="wildSendButtTitle"></button>
           </div>
 
-          <div id="vsWildInCombatDiv">
-            <label for="vsWildInCombatCheck" locText="wildInCombat"></label>
-            <input type="checkbox" name="vsWildInCombatCheck" id="vsWildInCombatCheck">
-          </div>
-
           <button id="updateWildButt" class="updateButt">
             <load-svg src="SVGs/Check.svg" id="checkIcon"></load-svg>
             <div id="updateWildText" locText="wildUpdateButt"></div>
@@ -275,10 +270,6 @@
             <load-svg src="SVGs/Check.svg" id="checkIcon"></load-svg>
             <div id="updateTrainerText" locText="trainerUpdateButt"></div>
           </button>
-
-          <!-- <button class="updateButt citraButtOff" id="citraButt" tabindex="-1" locText="autoUpdateButtOff" locTitle="autoUpdateButtTitle">
-            🍊 AUTO OFF
-          </button> -->
 
         </div>
   
