Badge code rework

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -14,18 +14,18 @@
     <div id="playerInfo">
 
         <div id="badgesTop">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/1.png" id="badge1" class="badge" alt="">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/2.png" id="badge2" class="badge" alt="">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/3.png" id="badge3" class="badge" alt="">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/4.png" id="badge4" class="badge" alt="">
+            <img src="../../Resources/Assets/Badges/5/BW2/1.png" id="badge1" class="badge" alt="">
+            <img src="../../Resources/Assets/Badges/5/BW2/2.png" id="badge2" class="badge" alt="">
+            <img src="../../Resources/Assets/Badges/5/BW2/3.png" id="badge3" class="badge" alt="">
+            <img src="../../Resources/Assets/Badges/5/BW2/4.png" id="badge4" class="badge" alt="">
             <img src="Resources/Images/Badges Top.png" alt="">
         </div>
 
         <div id="badgesBot">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/5.png" id="badge5" class="badge" alt="">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/6.png" id="badge6" class="badge" alt="">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/7.png" id="badge7" class="badge" alt="">
-            <img src="../../Resources/Assets/Gym Badges/5/BW2/8.png" id="badge8" class="badge">
+            <img src="../../Resources/Assets/Badges/5/BW2/5.png" id="badge5" class="badge" alt="">
+            <img src="../../Resources/Assets/Badges/5/BW2/6.png" id="badge6" class="badge" alt="">
+            <img src="../../Resources/Assets/Badges/5/BW2/7.png" id="badge7" class="badge" alt="">
+            <img src="../../Resources/Assets/Badges/5/BW2/8.png" id="badge8" class="badge">
             <img src="Resources/Images/Badges Bot.png" alt="">
         </div>
 
