Rework pokemon finder positioning

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -119,7 +119,7 @@
 
         <div class="vsWildTopRow">
 
-          <div class="finderPosition">
+          <div>
             <div class="selector pokeSelector" tabindex="-1" locTitle="pokeSelectTitle">
             <img class="pokeSelectorIcon" alt="">
             <div class="pokeSelectorText"></div>
@@ -344,7 +344,7 @@
 
 
 <!-- stuff that will get moved around -->
-<div id="pokeFinder" class="finder">
+<div popover id="pokeFinder" class="finder">
   <input type="text" class="listSearch mousetrap" locPHolder="finderFilterPHolder" spellcheck="false" tabindex="-1">
   <div class="searchList" id="pokeSearchList"></div>
 </div>
