Localize Pokemon names

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -270,6 +270,10 @@
                 <select id="langSelect" class="settingsSelect">
                   <option value="EN" locText="languageEN"></option>
                   <option value="ES" locText="languageES"></option>
+                  <option value="FR" locText="languageFR"></option>
+                  <option value="DE" locText="languageDE"></option>
+                  <option value="ITA" locText="languageITA"></option>
+                  <option value="JA" locText="languageJA"></option>
                 </select>
               </div>
 
