Support all unicode chars for auto nicknames

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokemon Stream Tool</title>
   <link rel="stylesheet" href="CSS/GUI.css">
-  <script src="Scripts/GUI/mousetrap.min.js" defer></script>
+  <script src="Scripts/GUI/External Libraries/mousetrap.min.js" defer></script>
+  <script src="Scripts/GUI/External Libraries/encoding.min.js" defer></script>
   <script src="Scripts/GUI/@pkmn/dex.js" defer></script>
   <script src="Scripts/GUI/@pkmn/data.js" defer></script>
   <script src="Scripts/GUI/@pkmn/img.js" defer></script>
