Auto read enemy trainer name (its a surprise tool that will help us later)

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -249,6 +249,8 @@
 
         <div class="teamButtRegion">
 
+          <input type="text" id="trainerNameInp" class="textInput mousetrap" spellcheck="false" locPHolder="trainerNamePHolder" locTitle="trainerNameTitle">
+
           <button id="updateTrainerButt" class="updateButt">
             <load-svg src="SVGs/Check.svg" class="svgIcon"></load-svg>
             <div id="updateTrainerText" locText="trainerUpdateButt"></div>
