Show enemy trainer name as battle intro

--- a/Stream Tool/Overlays/X and Y/XY Overlay.html
+++ b/Stream Tool/Overlays/X and Y/XY Overlay.html
@@ -437,6 +437,25 @@
 
     </div>
 
+    <div id="enemyNameIntroDiv">
+
+        <div id="enemyNameIntroContent">
+            <div id="enemyNameIntroTopBar" class="enemyNameIntroBar"></div>
+            <div id="enemyNameIntroTexts">
+                <span id="enemyNameIntroVs">VS</span>
+                <span id="enemyNameIntroTitle"></span>
+                <span id="enemyNameIntroName"></span>
+            </div>
+            <div id="enemyNameIntroBotBar" class="enemyNameIntroBar"></div>
+            <div id="enemyNameIntroPokeCountDiv">
+                <img id="enemyNameIntroPokeImg" src="../../Resources/Assets/None.png" alt="">
+                <div id="enemyNameIntroEqual">=</div>
+                <div id="enemyNameIntroPokeCount"></div>
+            </div>
+        </div>
+
+    </div>
+
 </div>
 
 <div id="connErrorDiv" locText="connError">
